--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,10 +16,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.12.0
+        with:
+          mongodb-version: '6.0'
+          mongodb-port: 27017
+      
       - name: Setup Deno
         uses: denolib/setup-deno@v2
         with:
           deno-version: v2.x
+          
       - name: Test
         run: deno test
         working-directory: library
