Add test rights

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,5 @@ jobs:
           deno-version: v2.x
           
       - name: Test
-        run: deno test
+        run: deno test -A --coverage=cov_profile
         working-directory: library
