--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           mongodb-version: '6.0'
           mongodb-port: 27017
+          mongodb-replica-set: rs0
       
       - name: Setup Deno
         uses: denolib/setup-deno@v2
