--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,11 @@ on:
       - main
       - develop
       - release/*
+  pull_request:
+    branches:
+      - main
+      - develop
+      - release/*
 
 jobs:
   test:
