--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,22 @@ on:
       - release/*
 
 jobs:
+  quality:
+    name:  SonarQube Quality Gate
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: read
+      id-token: write
+
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
   test:
     runs-on: ubuntu-latest
 
@@ -21,7 +37,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.12.0
         with:
