--- a/playground/deno.json
+++ b/playground/deno.json
@@ -3,7 +3,6 @@
         "valibot": "npm:valibot@^1.0.0",
         "mongodb": "npm:mongodb@^6.16.0",
         "@std/ulid": "jsr:@std/ulid@1",
-        "mongodbee": "../library/mod.ts",
-        "mongodbee/": "../library/src/"
+        "@diister/mongodbee": "../library/mod.ts"
     }
 }
